WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214401
Fix ITP data summary when using the memory store and blocking all third-party cookies
https://bugs.webkit.org/show_bug.cgi?id=214401
Summary
Fix ITP data summary when using the memory store and blocking all third-party...
Carlos Garcia Campos
Reported
2020-07-16 03:31:15 PDT
The memory store behaves differently than the database one, it only includes prevalent resources in the list, while the database store includes all resources when cooking blocking policy is All.
Attachments
Patch
(2.11 KB, patch)
2020-07-16 03:34 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.53 KB, patch)
2020-07-21 03:08 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-07-16 03:34:05 PDT
Created
attachment 404432
[details]
Patch
Michael Catanzaro
Comment 2
2020-07-16 05:52:00 PDT
Comment on
attachment 404432
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404432&action=review
I'm pretty sure this change is correct. Let's give John a day or two to do the final review, though, since it's his code.
> Source/WebKit/ChangeLog:3 > + Fix ITP data summary when using the memory satre and blocking all third-party cookies
memory store
Kate Cheney
Comment 3
2020-07-20 08:56:40 PDT
Great catch! I am the engineer who added the ITP data summary, this change looks good. It would be nice to also update the ITP data summary test case in this patch before landing, looks like it is missing the piece of code which turns off database mode. You can turn it off by adding: static bool doneFlag = false; [dataStore _setUseITPDatabase:false completionHandler: ^(void) { doneFlag = true; }]; TestWebKitAPI::Util::run(&doneFlag); right after calling [dataStore _setResourceLoadStatisticsEnabled:YES] in the GetResourceLoadStatisticsDataSummary test in TestWebKitAPI/Tests/WebKitCocoa/ResourceLoadStatistics.mm. The test should fail before your change, and pass after.
Carlos Garcia Campos
Comment 4
2020-07-21 03:08:42 PDT
Created
attachment 404805
[details]
Patch for landing
Carlos Garcia Campos
Comment 5
2020-07-21 05:19:00 PDT
Committed
r264650
: <
https://trac.webkit.org/changeset/264650
>
Radar WebKit Bug Importer
Comment 6
2020-07-21 05:19:15 PDT
<
rdar://problem/65878342
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug