Fix ITP data summary when using the memory store and blocking all third-party cookies https://bugs.webkit.org/show_bug.cgi?id=214401

Reviewed by Michael Catanzaro.

Source/WebKit:

The memory store behaves differently than the database one, it only includes prevalent resources in the list,
while the database store includes all resources when cooking blocking policy is All.

* NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
(WebKit::ResourceLoadStatisticsMemoryStore::aggregatedThirdPartyData const): Only check isPrevalentResource if
third party cookie blocking mode is not All to decide whether to include the domain in the report.

Tools:

Fix GetResourceLoadStatisticsDataSummary test to actually use the memory store.

* TestWebKitAPI/Tests/WebKitCocoa/ResourceLoadStatistics.mm:
(TEST):

Canonical link: https://commits.webkit.org/227396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264650 268f45cc-cd09-0410-ab3c-d52691b4dbfc